tests/org.eclipse.php.core.tests/workspace/errors/php54/unfinishedTraitDecl1.pdtt
--TEST--
Test unfinished trait declaration error reporting
--FILE--
<?php
trait A {
?>
--EXPECT--
[line=3, start=16, end=19] syntax error, unexpected 'EOF', expecting 'function'